[package]
name = "minesweeper"
description = "A Minesweeper game made as a learning exercise"
repository = "https://github.com/HactarCE/Minesweeper"
version = "0.1.0"
authors = ["HactarCE <6060305+HactarCE@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
ndarray = "0.12.1"
rand = "0.7.2"
tetra = "0.2"
